[package]
name = "asprim"
version = "0.1.0"
authors = ["bluss"]
license = "MIT/Apache-2.0"

description = "Cast any primitive numeric type to any other using `as` with the AsPrim trait."

repository = "https://github.com/bluss/asprim"
documentation = ""

keywords = ["cast", "numerics", "no_std"]

[dependencies]
